--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Rachel Vu - Marketing</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Rachel Vu</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/rachelvu.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Rachel Vu
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Marketing📚</div>
+        <p class="lead mb-4">Rachel is currently a first year student studying Business at the University of California, Riverside. She is studying towards a Bachelors Degree in Business Administration with a concentration in Marketing. In the future, she hopes to pursue a marketing related position in the beauty industry where she will be able to work alongside her colleagues in preparing releases and ideas for new beauty products. Her love and interest for beauty stemmed at a young age through frequently watching Youtube videos that taught her how to apply makeup. With this passion, she hopes to apply it to her lifelong career as it will ensure that she will be working towards something that she loves. Currently on campus, Rachel is involved in various social organizations. These include Alpha Delta Pi, a greek sorority focused on helping low-income families at the Ronald McDonald House, and Vietnamese Student Association, a cultural and social club that allows students to interact at various events with another. Besides her engagement with organizations, Rachel hopes to participate in campus planning for concerts through ASPB in the future.<br><br>
 
-        Enter bio here<br><br>
+        Through her participation in school clubs, internships, and jobs, Rachel has been able to gain a multitude of skills to prepare her in effectively working in different environments. Her skills include teamwork and leadership skills gained from previous volunteer and club experience, punctuality, and easy to interact with. Alongside these skills, Rachel is also a quick learner and through this has learned to easily adapt to new, unknown environments. Being Vietnamese-Amercian, Rachel is also fluent in both English and Vietnamese, which can be very useful in working with various business partners around the globe. In high school, her extracurricular activities included being in the dance team, serving as a secretary, treasurer, and publicist for multiple clubs at school, and playing violin in the school orchestra. Out of all of her past activities, Rachel’s favorite activity by far is serving as a link crew leader at her highschool. Through this experience, she served as a mentor for incoming freshman by providing them with guidance, offering advice, and answering any of their concerns about academics or highschool life in general. She believes that because of this opportunity she was able to improve on her listening skills and allowing others to speak first before offering upon her own judgement for them to take away. Music has always been a large part of Rachel’s life as she began playing piano at a young age and soon moved onto to violin where she found the most passion for music. With her love for violin, she progressed to complete her violin certification of merit up to level 8. <br><br>
 
-        Enter bio here
+        In her work experience, Rachel has worked as a brand representation for the retail company Hollister Co. During this job, she has gained a large amount of customer service skills through addressing customer’s shopping needs, compiling outfits to find what they are looking for, and helping them find the correct sizing. Alongside customer service, Rachel also worked as a cashier at this store where she would help customers sign up for a rewards programs, offer them deals, and thank them for coming at the end of their purchase.<br><br>
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://www.linkedin.com/in/rachel-vu-2867581a2">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/rachelvu">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/rachvu">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:rvu006@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,43 +92,43 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Brand Representative</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Hollister Co.</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Aided customers in finding what they were looking for<br> 
+              • Cashier<br>
+              • Greeting customers and folding clothes<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2018 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Intern</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">United Nations Association of Orange County</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Attend board meetings and give input<br>
+              • Participate in community service events<br>
+              • Organize fundraising events for existing members<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">April 2017 - March 2018</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Secretary/Treasurer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Junior State of America- Highschool Club</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Recorded minutes for every club meeting<br>
+            • Organized budgeting for club conventions<br>
+            • Contributed to advertising club meetings to non-members<br>
 
           </p>
           </div>
@@ -149,36 +149,14 @@
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div class="subheading mb-3">Business Administration-Undergraduate</div>
+            <div>Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2019 - June 2023</span>
           </div>
         </div>
 
@@ -191,7 +169,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/pic1.jpeg" width="500px">
+             <img src="img/pic2.jpeg" width="500px"><br>
+              <img src="img/pic3.jpeg" width="500px">
+               <img src="img/pic4.JPG" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +180,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Rachel Vu</center><br>
 
 
   </div>
